styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

html {
    scroll-behavior: smooth;
    background-color: #2b2a33;
    overflow-x: hidden;
}

li {
    list-style-type: none;
}

a {
    font-size: 18px;
    text-decoration: none;
}

h2 {
    font-weight: 900;
    font-size: 32px;
    padding-left: 8px;
    color: #2b2a33;
}

.click {
    cursor: pointer;
}

.green {
    color: #4aa584;
}

.row {
    max-width: 1200px;
    width: 100%;
    margin: 0 auto;
}

/*

    NAV

*/

nav {
    background-color: #2e6853;
}

.nav__row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 12px 48px;
    letter-spacing: 0.5px;
    max-width: 1200px;
    width: 100%;
    margin: 0 auto;
}

.nav__logo {
    height: 44px;
    width: 44px;
    filter: invert(100%);
}

.nav__logo--wrapper {
    display: flex;
    align-items: center;
}

.nav__link--list {
    display: flex;
    align-items: center;
}

.nav__list--container {
    justify-content: flex-end;
    align-items: center;
    display: flex;
}

.nav__link {
    margin: 0 24px;
}

.nav__link:last-child {
    margin: 0 0 0 44px;
}

.nav__link--anchor {
    font-size: 18px;
    color: #e8eaed;
    font-weight: 600;
}

.link__hover-effect {
    position: relative;
}

.link__hover-effect--white:after {
    background-color: #e8eaed;
}

.link__hover-effect:hover:after {
    left: 0;
    width: 100%;
}

.link__hover-effect:after {
    content: "";
    position: absolute;
    bottom: -3px;
    height: 3px;
    right: 0;
    width: 0;
    transition: all 300ms ease;
}

.nav__link--btn {
    font-size: 18px;
    font-weight: 600;
    padding: 10px 44px;
    border-radius: 999px;
    border: 1px solid #42414d;
    color: #e8eaed;
    background-color: #2b2a33;
    box-shadow: 6px 6px 18px 0 rgb(0, 0, 0, 0.3);
    transition: all 300ms ease;
}

.btn__hover-effect--color:hover {
    background-color: #42414d;
    border: 1px solid #2b2a33;
    color: #ffffff;
}

/*

    HEADER

*/

.header {
    padding: 48px 96px 0 96px;
}

.header__content {
    display: flex;
    align-items: center;
    flex-direction: column;
    text-align: center;
}

.title {
    font-size: 48px;
    letter-spacing: 2px;
    font-weight: 700;
    color: #e8eaed;
}

.sub__title {
    margin-top: 32px;
    font-size: 28px;
    color: #e8eaed;
    letter-spacing: 2px;
    font-weight: 800;
}

.header__search--wrapper {
    margin-top: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.header__search {
    margin-right: 22px;
    padding: 21px 36px 20px 24px;
    width: 560px;
    font-size: 26px;
    border-radius: 24px;
    box-shadow: 6px 6px 18px 0 rgb(0, 0, 0, 0.3);
    color: #8a8a8a;
    background-color: #2b2a33;
    border: solid 1px #42414d;
    transition: all 300ms ease;
}

.header__search:hover {
    border: solid 1px #2b2a33;
    background-color: #42414d;
}

.magnifying-glass {
    height: 40px;
    width: 40px;
    filter: invert(31%) sepia(57%) saturate(365%) hue-rotate(107deg) brightness(97%) contrast(90%);
    transition: all 300ms ease;
}

.search-btn {
    padding: 16px 60px;
    border-radius: 24px;
    background-color: #2b2a33;
    border: solid 1px #42414d;
    box-shadow: 6px 6px 18px 0 rgb(0, 0, 0, 0.3);
    transition: all 300ms ease;
}

.search-btn:hover {
    background-color: #42414d;
    border: solid 1px #2b2a33;
}

.search-btn:hover .magnifying-glass {
    filter: invert(52%) sepia(74%) saturate(282%) hue-rotate(107deg) brightness(94%) contrast(86%);
}


.landing-img {
    margin-top: 36px;
}

/* 

    MENU 
    
*/

.menu__backdrop {
    padding: 6px;
    z-index: 100;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    display: none;
    position: absolute;
    align-items: center;
    justify-content: flex-start;
    flex-direction: column;
    border: 1px solid #42414d;
    background-color: #2b2a33;
    box-shadow: inset 6px 6px 18px 0 rgb(0, 0, 0, 0.3);
}

.fade-in {
    animation: fade-in 300ms ease-in-out;
}

.fade-out {
    animation: fade-out 300ms ease-in-out;
}

@keyframes fade-in {
    0% {
        opacity: 0;
        left: 120px;
    }
    20% {
        opacity: 0.2;
    }
    40% {
        opacity: 0.4;
    }
    60% {
        opacity: 0.6;
    }
    80% {
        opacity: 0.8;
    }
    100% {
        opacity: 1;
    }
}

@keyframes fade-out {
    0% {
        opacity: 1;
        left: 20px;
    }
    20% {
        opacity: 0.8;
        left: 40px;
    }
    40% {
        opacity: 0.6;
        left: 60px;
    }
    60% {
        opacity: 0.4;
        left: 80px;
    }
    80% {
        opacity: 0.2;
        left: 100px;
    }
    100% {
        opacity: 0;
        left: 120px;
    }
}

.menu__btn {
    background: transparent;
    border: none;
    display: none;
    height: 44px;
    width: 44px;
    transition: all 300ms ease;
}

.menu__open--image {
    transition: all 300ms ease;
    filter: invert(93%) sepia(6%) saturate(90%) hue-rotate(177deg) brightness(100%) contrast(93%);
    height: 100%;
    width: 100%;
}

.menu__btn:hover .menu__open--image {
    filter: invert(22%) sepia(15%) saturate(458%) hue-rotate(206deg) brightness(101%) contrast(90%);
}

.menu__list {
    margin-left: 8px;
    padding-bottom: 16px;
}

.menu__list--item {
    margin: 100px 0;
    text-align: center;
}


.menu__list--link {
    font-weight: 600;
    font-size: 56px;
    letter-spacing: 3px;
    color: #e8eaed;
}

.menu__btn--close {
    align-self: flex-end;
    margin: 12px 12px 0 0;
    height: 34px;
    width: 34px;
    display: flex;
    border: none;
    justify-content: center;
    align-items: center;
    background-color: transparent;
}

.menu__close--image {
    transition: all 300ms ease;
    height: 34px;
    width: 34px;
    filter: invert(98%) sepia(1%) saturate(511%) hue-rotate(181deg) brightness(99%) contrast(87%);
}

.menu__close--image:hover {
    filter: invert(49%) sepia(22%) saturate(258%) hue-rotate(207deg) brightness(92%) contrast(83%);
}

/* SMALL PHONES */

@media (max-width: 480px) {

    body {
        width: 100vw;
        overflow-x: hidden;
    }

    .nav__link--list {
        visibility: hidden;
    }
    
    .header {
        padding: 56px 24px 0 24px;
    }
    .title {
        font-size: 36px;
        letter-spacing: 3px;
    }
    .sub__title {
        margin-top: 36px;
        font-size: 22px;
    }
    .header__search--wrapper {
        position: relative;
    }
    .header__search {
        padding: 14px 60px 14px 20px;
        width: 330px;
        margin: 0;
        border-radius: 36px;
    }

    .search-btn {
        position: absolute;
        right: 8px;
        border: none;
        box-shadow: none;
        padding: 12px;
    }

    .magnifying-glass {
        height: 24px;
        width: 24px;
    }
    .header__search--wrapper:hover .search-btn {
        background-color: #42414d;
    }
    .header__search--wrapper:hover .magnifying-glass {
        filter: invert(52%) sepia(74%) saturate(282%) hue-rotate(107deg) brightness(94%) contrast(86%);
    }

    .landing-img {
        margin-top: 66px;
        height: 200px;
    }

    .menu__btn {
        width: 40px;
        height: 40px;
        display: flex;
    }

    .nav__link--list {
        width: 0px;
    }

    nav {
        padding: 0 24px;
    }
}

